update for demo to SPCC
1. Added content for Lukla
2. Added a flag to set chapter bookmarks. Not all chapters will be bookmarked.
3. Edited legend to include hand-drawn maps.

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/digidem/maplibre-storymap/issues"
   },
-  "homepage": "https://github.com/digidem/maplibre-storymap#readme"
+  "homepage": "https://github.com/digidem/maplibre-storymap#readme",
+  "devDependencies": {
+    "prettier": "^3.8.0"
+  }
 }
